# Elego

./: .gitignore  LICENSE  README.md
CaptureGo/: board.py  branch.py  extendedencoder.py  gamestate.py  group.py  human_agent.py  random_agent.py  simpleencoder.py  test.py  test_board.py  train_loop.py  training.py  trainloop.py  transform.py  z_agent.py  zagent.py  zexperiencecollector.py
CaptureGo/nets/: z_net.pt  znet.pt
CaptureGo/selfplaydata/: z_agentb.npz  z_agentw.npz
Elego/: agent.py  encoder.py  gamestate.py  human_agent.py  network.py  node.py  playgui.py  random_agent.py  selfplay.py  simpleencoder.py  test.py  test_board.py  test_encoder.py  training.py  trainloop.py  transform.py  wnet.py  zagent.py  zexperiencecollector.py
Elego/encoders/: encoder.py  extendedencoder.py  simpleencoder.py  test_encoder.py
Elego/gameplay/: board.py  config_board.py  gamestate.py  move.py  test_board.py
Elego/nets9x9/: znet38.pt
SelfplayEngine/: CMakeLists.txt  engine.cc  engine.h  main.cc  network_evaluation.cc  network_evaluation.h
SelfplayEngine/agents/: branch.h  mcts.cc  mcts.h  node.cc  node.h  policy_agent.cc  policy_agent.h  random_agent.cc  random_agent.h  test_nets.h  test_policy.h
SelfplayEngine/encoders/: extended_encoder.cc  extended_encoder.h
SelfplayEngine/gameplay/: board.cc  board.h  gamestate.cc  gamestate.h  group.cc  group.h  move.cc  move.h
SelfplayEngine/util/: write_sgf.cc  write_sgf.h
